--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                   </div>
                 </div>
                 <div class="">
-                  <img src="/images/pedri.jpg" alt="" />
+                  <img src="./images/pedri.jpg" alt="" />
                 </div>
                 <div class="space-y-1">
                   <div
