--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             <div
               class="flex w-2/3 flex-col items-center lg:flex-row lg:justify-start lg:items-center">
               <div
-                class="bg-[url(./images/fm.jpg)] h-16 w-16 bg-cover rounded-full"></div>
+                class="bg-[url(images/fm.jpg)] h-16 w-16 bg-cover rounded-full"></div>
               <div class="ps-2 flex flex-col justify-center items-center">
                 <p class="text-sm font-bold dark:text-white">moimen wagdy</p>
                 <p class="capitalize text-sm text-black/40 dark:text-white/40">
@@ -471,7 +471,7 @@
               <div
                 class="flex w-3/4 flex-col items-center lg:flex-row lg:justify-start lg:items-center">
                 <div
-                  class="bg-[url(./images/f12.jpg)] h-10 w-10 bg-cover rounded-full shrink-0"></div>
+                  class="bg-[url(images/f12.jpg)] h-10 w-10 bg-cover rounded-full shrink-0"></div>
                 <div
                   class="ps-2 flex flex-col justify-center lg:justify-start items-center lg:items-start">
                   <p class="text-sm font-bold dark:text-white">MohamedOsama</p>
@@ -493,7 +493,7 @@
               <div
                 class="flex w-3/4 flex-col items-center lg:flex-row lg:justify-start lg:items-center">
                 <div
-                  class="bg-[url(./images/f6.jpg)] h-10 w-10 bg-cover rounded-full shrink-0"></div>
+                  class="bg-[url(images/f6.jpg)] h-10 w-10 bg-cover rounded-full shrink-0"></div>
                 <div
                   class="ps-2 flex flex-col justify-center lg:justify-start items-center lg:items-start">
                   <p class="text-sm font-bold dark:text-white">MahmouFarouk</p>
@@ -515,7 +515,7 @@
               <div
                 class="flex w-3/4 flex-col items-center lg:flex-row lg:justify-start lg:items-center">
                 <div
-                  class="bg-[url(./images/f8.jpg)] h-10 w-10 bg-cover rounded-full shrink-0"></div>
+                  class="bg-[url(images/f8.jpg)] h-10 w-10 bg-cover rounded-full shrink-0"></div>
                 <div
                   class="ps-2 flex flex-col justify-center lg:justify-start items-center lg:items-start">
                   <p class="text-sm font-bold dark:text-white">NonaGamal</p>
@@ -537,7 +537,7 @@
               <div
                 class="flex w-3/4 flex-col items-center lg:flex-row lg:justify-start lg:items-center">
                 <div
-                  class="bg-[url(./images/f10.jpg)] h-10 w-10 bg-cover rounded-full shrink-0"></div>
+                  class="bg-[url(images/f10.jpg)] h-10 w-10 bg-cover rounded-full shrink-0"></div>
                 <div
                   class="ps-2 flex flex-col justify-center lg:justify-start items-center lg:items-start">
                   <p class="text-sm font-bold dark:text-white">ShirifAmer</p>
@@ -559,7 +559,7 @@
               <div
                 class="flex w-3/4 flex-col items-center lg:flex-row lg:justify-start lg:items-center">
                 <div
-                  class="bg-[url(./images/f14.jpg)] h-10 w-10 bg-cover rounded-full shrink-0"></div>
+                  class="bg-[url(images/f14.jpg)] h-10 w-10 bg-cover rounded-full shrink-0"></div>
                 <div
                   class="ps-2 flex flex-col justify-center lg:justify-start items-center lg:items-start">
                   <p class="text-sm font-bold dark:text-white">AmroAdib</p>
