--- a/index.html
+++ b/index.html
@@ -27,43 +27,43 @@
             <li
               class="group rounded-md hover:bg-slate-300/50 before:hidden dark:hover:bg-slate-400/50 mx-4 cursor-pointer before:content-['Home'] before:absolute before:w-28 before:text-center before:h-12 before:rounded-r-full relative before:right-[-127px] hover:before:flex lg:before:hover:hidden before:justify-center before:items-center before:bg-transparent before:hover:bg-slate-200/20 before:hover:text-black before:text-transparent before:duration-[1000ms] dark:hover:before:text-white duration-100 transition lg:pl-3 text-start flex items-center justify-center lg:justify-start lg:text-start">
               <i
-                class="group-hover:scale-110 relative hover:rounded-md p-3 text-2xl inline fa-solid fa-house transition duration-300"></i>
+                class="group-hover:scale-110 relative hover:rounded-md px-3 py-1 lg:py-0 lg:px-0 lg:p-3 text-lg lg:text-2xl inline fa-solid fa-house transition duration-300"></i>
               <p class="hidden lg:inline text-center p-3">Home</p>
             </li>
             <li
               class="group rounded-md hover:bg-slate-300/50 before:hidden dark:hover:bg-slate-400/50 mx-4 cursor-pointer before:content-['Search'] before:absolute before:w-28 before:text-center before:h-12 before:rounded-r-full relative before:right-[-127px] hover:before:flex lg:before:hover:hidden before:justify-center before:items-center before:bg-transparent before:hover:bg-slate-200/20 before:hover:text-black before:text-transparent before:duration-[1000ms] dark:hover:before:text-white duration-100 transition lg:pl-3 text-start flex items-center justify-center lg:justify-start lg:text-start">
               <i
-                class="group-hover:scale-110 relative hover:rounded-md p-3 text-2xl inline fa-solid fa-magnifying-glass transition duration-300"></i>
+                class="group-hover:scale-110 relative hover:rounded-md px-3 py-1 lg:py-0 lg:px-0 lg:p-3 text-lg lg:text-2xl inline fa-solid fa-magnifying-glass transition duration-300"></i>
               <p class="hidden lg:inline text-center p-3">Search</p>
             </li>
             <li
               class="group rounded-md hover:bg-slate-300/50 before:hidden dark:hover:bg-slate-400/50 mx-4 cursor-pointer before:content-['Explore'] before:absolute before:w-28 before:text-center before:h-12 before:rounded-r-full relative before:right-[-127px] hover:before:flex lg:before:hover:hidden before:justify-center before:items-center before:bg-transparent before:hover:bg-slate-200/20 before:hover:text-black before:text-transparent before:duration-[1000ms] dark:hover:before:text-white duration-100 transition lg:pl-3 text-start flex items-center justify-center lg:justify-start lg:text-start">
               <i
-                class="group-hover:scale-110 relative hover:rounded-md p-3 text-2xl inline fa-brands fa-wpexplorer transition duration-300"></i>
+                class="group-hover:scale-110 relative hover:rounded-md px-3 py-1 lg:py-0 lg:px-0 lg:p-3 text-lg lg:text-2xl inline fa-brands fa-wpexplorer transition duration-300"></i>
               <p class="hidden lg:inline text-center p-3">Explore</p>
             </li>
             <li
               class="group rounded-md hover:bg-slate-300/50 before:hidden dark:hover:bg-slate-400/50 mx-4 cursor-pointer before:content-['Reels'] before:absolute before:w-28 before:text-center before:h-12 before:rounded-r-full relative before:right-[-127px] hover:before:flex lg:before:hover:hidden before:justify-center before:items-center before:bg-transparent before:hover:bg-slate-200/20 before:hover:text-black before:text-transparent before:duration-[1000ms] dark:hover:before:text-white duration-100 transition lg:pl-3 text-start flex items-center justify-center lg:justify-start lg:text-start">
               <i
-                class="group-hover:scale-110 relative hover:rounded-md p-3 text-2xl inline fa-solid fa-video transition duration-300"></i>
+                class="group-hover:scale-110 relative hover:rounded-md px-3 py-1 lg:py-0 lg:px-0 lg:p-3 text-lg lg:text-2xl inline fa-solid fa-video transition duration-300"></i>
               <p class="hidden lg:inline text-center p-3">Reels</p>
             </li>
             <li
               class="group rounded-md hover:bg-slate-300/50 before:hidden dark:hover:bg-slate-400/50 mx-4 cursor-pointer before:content-['Messages'] before:absolute before:w-28 before:text-center before:h-12 before:rounded-r-full relative before:right-[-127px] hover:before:flex lg:before:hover:hidden before:justify-center before:items-center before:bg-transparent before:hover:bg-slate-200/20 before:hover:text-black before:text-transparent before:duration-[1000ms] dark:hover:before:text-white duration-100 transition lg:pl-3 text-start flex items-center justify-center lg:justify-start lg:text-start">
               <i
-                class="group-hover:scale-110 relative hover:rounded-md p-3 text-2xl inline fa-regular fa-message transition duration-300"></i>
+                class="group-hover:scale-110 relative hover:rounded-md px-3 py-1 lg:py-0 lg:px-0 lg:p-3 text-lg lg:text-2xl inline fa-regular fa-message transition duration-300"></i>
               <p class="hidden lg:inline text-center p-3">Messages</p>
             </li>
             <li
               class="group rounded-md hover:bg-slate-300/50 before:hidden dark:hover:bg-slate-400/50 mx-4 cursor-pointer before:content-['Notifications'] before:absolute before:w-28 before:text-center before:h-12 before:rounded-r-full relative before:right-[-127px] hover:before:flex lg:before:hover:hidden before:justify-center before:items-center before:bg-transparent before:hover:bg-slate-200/20 before:hover:text-black before:text-transparent before:duration-[1000ms] dark:hover:before:text-white duration-100 transition lg:pl-3 text-start flex items-center justify-center lg:justify-start lg:text-start">
               <i
-                class="group-hover:scale-110 relative hover:rounded-md p-3 text-2xl inline fa-regular fa-bell transition duration-300"></i>
+                class="group-hover:scale-110 relative hover:rounded-md px-3 py-1 lg:py-0 lg:px-0 lg:p-3 text-lg lg:text-2xl inline fa-regular fa-bell transition duration-300"></i>
               <p class="hidden lg:inline text-center p-3">notifications</p>
             </li>
             <li
               class="group rounded-md hover:bg-slate-300/50 before:hidden dark:hover:bg-slate-400/50 mx-4 cursor-pointer before:content-['Creat'] before:absolute before:w-28 before:text-center before:h-12 before:rounded-r-full relative before:right-[-127px] hover:before:flex lg:before:hover:hidden before:justify-center before:items-center before:bg-transparent before:hover:bg-slate-200/20 before:hover:text-black before:text-transparent before:duration-[1000ms] dark:hover:before:text-white duration-100 transition lg:pl-3 text-start flex items-center justify-center lg:justify-start lg:text-start">
               <i
-                class="group-hover:scale-110 relative hover:rounded-md p-3 text-2xl inline fa-solid fa-square-plus transition duration-300"></i>
+                class="group-hover:scale-110 relative hover:rounded-md px-3 py-1 lg:py-0 lg:px-0 lg:p-3 text-lg lg:text-2xl inline fa-solid fa-square-plus transition duration-300"></i>
               <p class="hidden lg:inline text-center p-3">Creat</p>
             </li>
           </ul>
@@ -126,7 +126,7 @@
       </div>
       <div class="right ring-1 ring-slate-300 flex overflow-auto">
         <div class="w-2/3 h-screen grow max-w-[100%]">
-          <div class="relative w-[81%] mx-auto dark:bg-slate-900 mt-2">
+          <div class="relative lg:w-[81%] mx-auto dark:bg-slate-900 mt-2">
             <div
               class="ps-2 scroll-smooth scrollbar-none scrollArea flex items-center space-x-5 justify-between snap-x overflow-x-auto min-h-[140px] max-h-44">
               <div
@@ -310,7 +310,8 @@
           </div>
 
           <div class="cardCont w-full h-full">
-            <div class="card w-2/3 dark:bg-slate-900 h-full mx-auto p-6">
+            <div
+              class="card w-full md:w-2/3 dark:bg-slate-900 h-full mx-auto p-6">
               <div class="w-full space-y-4">
                 <div class="flex justify-between">
                   <div class="le flex justify-start items-center space-x-3">
