--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       rel="stylesheet" />
   </head>
   <body class="">
-    <div class="main w-screen h-screen flex dark:bg-slate-900">
-      <div class="left w-16 md:w-24 lg:w-96 h-full space-y-10 relative shrink">
+    <div class="main w-screen flex dark:bg-slate-900">
+      <div class="left w-16 md:w-24 lg:w-96 h-full space-y-10 relative grow">
         <div class="brand mx-auto text-center mt-6">
           <i
             class="fa-brands fa-instagram text-5xl lg:hidden dark:text-white"></i>
